Fixed 'remove all' button on mobile

--- a/src/components/options/options.component.scss
+++ b/src/components/options/options.component.scss
@@ -1,5 +1,4 @@
 .card {
-
     height:43vh;
     margin-bottom: 20px;
 }
@@ -7,6 +6,8 @@
 .card-header {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    flex-shrink: 0;
 }
 
 .card-header-text {
@@ -19,5 +20,5 @@
 }
 
 .options-alert {
-    margin-top: 15%;
+    margin-top: 10%;
 }
